# cool_project_name_SPH

./: LICENSE  README.md  pyproject.toml  test.ipynb
.github/workflows/: ci.yaml
cool_project_name_SPH/: __init__.py  main.py
cool_project_name_SPH/tests/: test_project.py
science_project/: __init__.py
science_project/tests/: test_project.py
