[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "science-project"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["science_project"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest]
python_files = "test_*.py"
testpaths = ["science_project/tests"]
