[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cool_project_name_SPH"
version = "0.1.0"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["cool_project_name_SPH"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest]
python_files = "test_*.py"
testpaths = ["cool_project_name_SPH/tests"]
